@@ -40,7 +40,7 @@ my %WriteMakefileArgs = (
     'Dist::Zilla::Plugin::InstallRelease' => '0.006',
     'Dist::Zilla::Plugin::MinimumPerl' => '0',
     'Dist::Zilla::Plugin::NextRelease' => '0',
-    'Dist::Zilla::Plugin::PkgVersion' => '0',
+    'Dist::Zilla::Plugin::OurPkgVersion' => '0',
     'Dist::Zilla::Plugin::PodWeaver' => '0',
     'Dist::Zilla::Plugin::ReadmeFromPod' => '0',
     'Dist::Zilla::Plugin::Repository' => '0.13',
