@@ -49,8 +49,8 @@ DESCRIPTION
         [LocalInstall]
 
 USAGE
-    Just put "[@DOHERTY]" in your dist.ini. You can supply the following
-    options:
+    Just put "[@Author::DOHERTY]" in your dist.ini. You can supply the
+    following options:
 
     *   "fake_release" specifies whether to use "FakeRelease" instead of
         "UploadToCPAN". Defaults to 0.
@@ -90,6 +90,12 @@ AVAILABILITY
     <git://github.com/doherty/Dist-Zilla-PluginBundle-Author-DOHERTY.git>.
     Instead of sending patches, please fork this project using the standard
     git and github infrastructure.
+
+SOURCE
+    The development version is on github at
+    <http://github.com/doherty/Dist-Zilla-PluginBundle-Author-DOHERTY> and
+    may be cloned from
+    <git://github.com/doherty/Dist-Zilla-PluginBundle-Author-DOHERTY.git>
 
 BUGS AND LIMITATIONS
     No bugs have been reported.
