@@ -1,6 +1,7 @@
 Revision history for Perl module Dist-Zilla-PluginBundle-Author-DOHERTY
 
 {{$NEXT}}
+    * Use OurPkgVersion instead of PkgVersion - much better
 
 0.012     2011-02-06
     * Require D::Z::PB::TestingMania 0.003 for a better dep tree & PodLinkTests
